# TUNA

./: .gitignore  LICENSE  PKGBUILD  README.md  build-appimage.sh  pyproject.toml  setup.py
.github/workflows/: appimage.yml
tuna/: __init__.py  __main__.py  app.py  art.py  config.py  downloader.py  draw.py  metadata.py  player.py  playlist.py  settings.py  visualizer.py
